Upgrade Liftwizard from 2.1.9 to 2.1.10. Refactor AbstractKlassConfiguration to extend AbstractLiftwizardConfiguration.