@@ -16,7 +16,6 @@
 
 package cool.klass.dropwizard.configuration;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.validation.Valid;
@@ -32,16 +31,8 @@ import cool.klass.dropwizard.configuration.domain.model.loader.DomainModelFactor
 import cool.klass.dropwizard.configuration.domain.model.loader.DomainModelFactoryProvider;
 import cool.klass.dropwizard.configuration.sample.data.SampleDataFactory;
 import cool.klass.dropwizard.configuration.sample.data.SampleDataFactoryProvider;
-import io.dropwizard.Configuration;
-import io.liftwizard.dropwizard.configuration.auth.filter.AuthFilterFactory;
-import io.liftwizard.dropwizard.configuration.auth.filter.AuthFilterFactoryProvider;
-import io.liftwizard.dropwizard.configuration.clock.ClockFactory;
-import io.liftwizard.dropwizard.configuration.clock.ClockFactoryProvider;
-import io.liftwizard.dropwizard.configuration.config.logging.ConfigLoggingFactoryProvider;
 import io.liftwizard.dropwizard.configuration.connectionmanager.ConnectionManagerProvider;
 import io.liftwizard.dropwizard.configuration.connectionmanager.ConnectionManagersFactory;
-import io.liftwizard.dropwizard.configuration.cors.CorsFactory;
-import io.liftwizard.dropwizard.configuration.cors.CorsFactoryProvider;
 import io.liftwizard.dropwizard.configuration.datasource.NamedDataSourceProvider;
 import io.liftwizard.dropwizard.configuration.datasource.NamedDataSourcesFactory;
 import io.liftwizard.dropwizard.configuration.ddl.executor.DdlExecutorFactory;
@@ -49,16 +40,11 @@ import io.liftwizard.dropwizard.configuration.ddl.executor.DdlExecutorFactoryPro
 import io.liftwizard.dropwizard.configuration.enabled.EnabledFactory;
 import io.liftwizard.dropwizard.configuration.h2.H2Factory;
 import io.liftwizard.dropwizard.configuration.h2.H2FactoryProvider;
-import io.liftwizard.dropwizard.configuration.http.logging.JerseyHttpLoggingFactory;
-import io.liftwizard.dropwizard.configuration.http.logging.JerseyHttpLoggingFactoryProvider;
 import io.liftwizard.dropwizard.configuration.liquibase.migration.LiquibaseMigrationFactory;
 import io.liftwizard.dropwizard.configuration.liquibase.migration.LiquibaseMigrationFactoryProvider;
-import io.liftwizard.dropwizard.configuration.object.mapper.ObjectMapperFactory;
-import io.liftwizard.dropwizard.configuration.object.mapper.ObjectMapperFactoryProvider;
+import io.liftwizard.dropwizard.configuration.parent.AbstractLiftwizardConfiguration;
 import io.liftwizard.dropwizard.configuration.reladomo.ReladomoFactory;
 import io.liftwizard.dropwizard.configuration.reladomo.ReladomoFactoryProvider;
-import io.liftwizard.dropwizard.configuration.system.properties.SystemPropertiesFactory;
-import io.liftwizard.dropwizard.configuration.system.properties.SystemPropertiesFactoryProvider;
 import io.liftwizard.dropwizard.configuration.uuid.UUIDSupplierFactory;
 import io.liftwizard.dropwizard.configuration.uuid.UUIDSupplierFactoryProvider;
 
@@ -81,39 +67,23 @@ import io.liftwizard.dropwizard.configuration.uuid.UUIDSupplierFactoryProvider;
         "bootstrap",
 })
 public abstract class AbstractKlassConfiguration
-        extends Configuration
-        implements ConfigLoggingFactoryProvider,
-        CorsFactoryProvider,
-        AuthFilterFactoryProvider,
-        ObjectMapperFactoryProvider,
-        JerseyHttpLoggingFactoryProvider,
-        H2FactoryProvider,
+        extends AbstractLiftwizardConfiguration
+        implements H2FactoryProvider,
         DdlExecutorFactoryProvider,
         ReladomoFactoryProvider,
         SampleDataFactoryProvider,
         DataStoreFactoryProvider,
         DomainModelFactoryProvider,
         UUIDSupplierFactoryProvider,
-        ClockFactoryProvider,
         NamedDataSourceProvider,
         ConnectionManagerProvider,
-        SystemPropertiesFactoryProvider,
         LiquibaseMigrationFactoryProvider
 {
-    // General
     private @Valid          KlassFactory            klassFactory;
-    private @Valid @NotNull SystemPropertiesFactory systemPropertiesFactory = new SystemPropertiesFactory();
-
-    // Services
-    private @Valid @NotNull EnabledFactory           configLoggingFactory     = new EnabledFactory();
-    private @Valid @NotNull ObjectMapperFactory      objectMapperFactory      = new ObjectMapperFactory();
-    private @Valid @NotNull CorsFactory              corsFactory              = new CorsFactory();
-    private @Valid @NotNull List<AuthFilterFactory>  authFilterFactories      = Arrays.asList();
-    private @Valid @NotNull JerseyHttpLoggingFactory jerseyHttpLoggingFactory = new JerseyHttpLoggingFactory();
 
     // Data
     private @Valid          H2Factory                 h2Factory;
-    private @Valid @NotNull List<DdlExecutorFactory>  ddlExecutorFactories      = Arrays.asList();
+    private @Valid @NotNull List<DdlExecutorFactory>  ddlExecutorFactories      = List.of();
     private @Valid @NotNull ReladomoFactory           reladomoFactory           = new ReladomoFactory();
     private @Valid @NotNull SampleDataFactory         sampleDataFactory         = new SampleDataFactory();
     private @Valid @NotNull EnabledFactory            bootstrapFactory          = new EnabledFactory();
@@ -137,45 +107,6 @@ public abstract class AbstractKlassConfiguration
     public void setKlassFactory(KlassFactory klassFactory)
     {
         this.klassFactory = klassFactory;
-    }
-
-    @Override
-    @JsonProperty("configLogging")
-    public EnabledFactory getConfigLoggingFactory()
-    {
-        return this.configLoggingFactory;
-    }
-
-    @JsonProperty("configLogging")
-    public void setConfigLoggingFactory(EnabledFactory configLoggingFactory)
-    {
-        this.configLoggingFactory = configLoggingFactory;
-    }
-
-    @Override
-    @JsonProperty("objectMapper")
-    public ObjectMapperFactory getObjectMapperFactory()
-    {
-        return this.objectMapperFactory;
-    }
-
-    @JsonProperty("objectMapper")
-    public void setObjectMapperFactory(ObjectMapperFactory objectMapperFactory)
-    {
-        this.objectMapperFactory = objectMapperFactory;
-    }
-
-    @Override
-    @JsonProperty("jerseyHttpLogging")
-    public JerseyHttpLoggingFactory getJerseyHttpLoggingFactory()
-    {
-        return this.jerseyHttpLoggingFactory;
-    }
-
-    @JsonProperty("jerseyHttpLogging")
-    public void setJerseyHttpLoggingFactory(JerseyHttpLoggingFactory jerseyHttpLoggingFactory)
-    {
-        this.jerseyHttpLoggingFactory = jerseyHttpLoggingFactory;
     }
 
     // TODO: Error messages contain the word factory because of the field name
@@ -252,32 +183,6 @@ public abstract class AbstractKlassConfiguration
     }
 
     @Override
-    @JsonProperty("cors")
-    public CorsFactory getCorsFactory()
-    {
-        return this.corsFactory;
-    }
-
-    @JsonProperty("cors")
-    public void setCors(CorsFactory corsFactory)
-    {
-        this.corsFactory = corsFactory;
-    }
-
-    @Override
-    @JsonProperty("authFilters")
-    public List<AuthFilterFactory> getAuthFilterFactories()
-    {
-        return this.authFilterFactories;
-    }
-
-    @JsonProperty("authFilters")
-    public void setAuthFilters(List<AuthFilterFactory> authFilterFactories)
-    {
-        this.authFilterFactories = authFilterFactories;
-    }
-
-    @Override
     @JsonProperty("sampleData")
     public SampleDataFactory getSampleDataFactory()
     {
@@ -300,19 +205,6 @@ public abstract class AbstractKlassConfiguration
     public void setBootstrap(EnabledFactory bootstrapFactory)
     {
         this.bootstrapFactory = bootstrapFactory;
-    }
-
-    @Override
-    @JsonProperty("systemProperties")
-    public SystemPropertiesFactory getSystemPropertiesFactory()
-    {
-        return this.systemPropertiesFactory;
-    }
-
-    @JsonProperty("systemProperties")
-    public void setSystemPropertiesFactory(SystemPropertiesFactory systemPropertiesFactory)
-    {
-        this.systemPropertiesFactory = systemPropertiesFactory;
     }
 
     @JsonProperty("liquibase")
@@ -347,12 +239,5 @@ public abstract class AbstractKlassConfiguration
     public UUIDSupplierFactory getUuidSupplierFactory()
     {
         return this.getDataStoreFactory().getUuidFactory();
-    }
-
-    @JsonIgnore
-    @Override
-    public ClockFactory getClockFactory()
-    {
-        return this.klassFactory.getClockFactory();
     }
 }
